DynamoDB Integration (#19)
* feature: dynamodb integration

* feature: dynamodb integration tests

* feature: dynamodb integration tests

* feature: fix e2e tests

* feature: add email to dynamo

* feature: use own components instead of native ones.

* feature: fix failing tests

* feature: fix styling issues

* feature: add db schema for recipe

* fix: translation bug when no profile was (yet) loaded

* feature: record last login and display it on settings page

* feature: record last login and display it on settings page

---------
